# buildc

./: .gitignore  Cargo.toml  README.md  build.zig  bun.lockb  package.json  pnpm-lock.yaml
.github/workflows/: build-native-binaries.yml  release.yml
demo/: README.md  bun.lockb  package.json
demo/a/: package.json
demo/b/: package.json
demo/c/: package.json
example-monorepo/: pnpm-lock.yaml
npm/: README.md  buildc  index.mjs  package.json  postinstall.js  postinstall.mjs
src/: buildc.zig  cli.ts  colors.rs  colors.zig  commands.rs  commands.zig  ctx.rs  globby.rs  graph.rs  hash.rs  index.ts  lib.rs  main.rs  monorepo.rs  monorepo.zig  tree.zig  types.ts  utils.zig
src/cli/: commands.ts  index.ts
src/utils/: cache-utils.ts  graph-utils.ts  lock-utils.ts  log-utils.ts  monorepo-utils.ts
src/utils/__tests__/: graph-utils.test.ts
