[package]
name = "aklinker1_buildc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde_yaml = "0.9"
glob = "0.3.1"
md5 = "0.7.0"
fs_extra = "1.3.0"

[target.x86_64-pc-windows-msvc]
linker = "lld"
[target.x86_64-apple-darwin]
linker = "clang"
[target.aarch64-apple-darwin]
linker = "clang"
[target.x86_64-unknown-linux-gnu]
linker = "gcc"
[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"
